fix: css bug scaling weekly agenda columns out of view
Fixed a bug in `painel-94k2.css` where `.cell-booked` elements were
expanding to `100vw` and `100vh` rather than their containing cell,
which caused the weekly grid loop to be pushed out of bounds or hidden
by a giant white block. The properties were adjusted to `100%`. Also
updated the HTML cache busting `?v=` variables.

--- a/css/painel-94k2.css
+++ b/css/painel-94k2.css
@@ -550,8 +550,8 @@
             cursor: pointer;
             transition: all 0.2s;
             margin: 0;
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             box-sizing: border-box;
             position: relative;
             display: flex;
